<resources>
    <string name="app_name">HandoverRider</string>
    <string name="data_not_available">Data not available</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="contact_to_support_team">Contact to support team</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text"><font color="#494949">I have read the </font><font color="#0F6FB5">T&amp;Cs</font><font color="#494949"> of Handover</font> </string>
    <string name="re_send">Re-send</string>
    <string name="submit">Submit</string>
    <string name="getting_started">Getting Started</string>
    <string name="select_city">Select City</string>
    <string name="select_work_nlocation">Select Work \nLocation</string>
    <string name="state_you_want_to_work">State you want to work</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="mobile_nverification">Mobile \nVerification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="select_zone">Select Zone</string>
    <string name="notify_me">Notify Me</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="best_for_delivering_documents_daily_essentials"><![CDATA[Best for delivering documents & \ndaily essentials]]></string>
    <string name="_3_wheeler">3-Wheeler</string>
    <string name="best_for_delivering_garments_nhousehold_equipment"><![CDATA[Best for delivering garments & \nhousehold equipment]]></string>
    <string name="tata_ace">Tata Ace</string>
    <string name="best_for_delivering_furniture_ncommercial_goods"><![CDATA[Best for delivering furniture & \ncommercial goods]]></string>
    <string name="best_for_delivering_office_furniture_nheavy_machinery"><![CDATA[Best for delivering office furniture & \nheavy machinery]]></string>
    <string name="no_number_plate_vehicle">No Number Plate Vehicle</string>
    <string name="i_assure_that_the_vehicle_i_drive_ndoesn_t_require_any_licence">I assure that the vehicle I drive \ndoesn’t require any licence</string>
    <string name="you_cannot_change_the_city_for_the_nnext_3_months">You cannot change the City for the \nnext <font color="#FF0000"> 3 months</font></string>
    <string name="gender">Gender</string>
    <string name="enter_name_as_per_pan">Enter Name as Per PAN</string>
    <string name="enter_pan_number">Enter PAN Number</string>
    <string name="upload_pan">Upload PAN</string>
    <string name="upload_aadhar_card">Upload Aadhar Card</string>
    <string name="enter_name_as_per_aadhar_card">Enter Name as per Aadhar Card</string>
    <string name="aadhaar_nverification">Aadhaar \nVerification</string>
    <string name="driving_licence_nverification">Driving Licence \nVerification</string>
    <string name="verify_submit"><![CDATA[Verify & Submit]]></string>
    <string name="upload_bike_front">Upload Bike Front</string>
    <string name="max_size_200kb">Max size 200KB</string>
    <string name="upload_bike_front_image">Upload Bike Front Image</string>
    <string name="upload_bike_back">Upload Bike Back</string>
    <string name="upload_bike_back_image">Upload Bike Back Image</string>
    <string name="upload_electric_vehicle_doc">Upload Electric Vehicle Doc.</string>
    <string name="upload_ev_document_image">Upload EV Document Image</string>
    <string name="upload_rc_image">Upload RC Image</string>
    <string name="enter_vehicle_number">Enter vehicle number</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="bank_account_verification">Bank Account \nVerification</string>
    <string name="enter_bank_account">Enter Bank Account</string>
    <string name="rs_1_will_be_deposited_to_your_account">Rs.1 will be deposited to your account</string>
    <string name="branch">Branch</string>
    <string name="account_type">Account Type</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="in_order_to_transfer_your_payout_we_need_to_nverify_your_account_number">In order to transfer your payout we need to \nverify your account number</string>
    <string name="click">Click</string>
    <string name="we_would_like_nto_see_you">We would like \nto see you!</string>
    <string name="click_a_picture_of_yourself_nwith_mobile_camera">Click a picture of yourself\nwith mobile camera</string>
    <string name="no_of_trips">No. of Trips</string>
    <string name="today_s_earnings">Today’s Earnings</string>
    <string name="documents_details"><![CDATA[Documents & Details]]></string>
    <string name="my_profile">My Profile</string>
    <string name="orders">Orders</string>
    <string name="months">Months</string>
    <string name="handover_id_card">Handover Id Card</string>
    <string name="my_performance">My Performance</string>
    <string name="your_services">Your Services</string>
    <string name="language_settings">Language Settings</string>
    <string name="verified">Verified</string>
    <string name="share">Share</string>
    <string name="view_declaration">View declaration</string>
    <string name="help">Help</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="license_number">License Number</string>
    <string name="services">Services</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="language_speak">Language | speak</string>
    <string name="language_details_not_available">Language details not available</string>
    <string name="driving_license">Driving License</string>
    <string name="aadhar">Aadhar</string>
    <string name="address">Address</string>
    <string name="app_language">App Language</string>
    <string name="set_the_language_for_your_app">Set the language for your app</string>
    <string name="notification_language">Notification Language</string>
    <string name="set_the_language_for_notifications">Set the language for notifications</string>
    <string name="start_accepting_orders_to_see_performance">Start accepting orders to see performance</string>
    <string name="know_more">KNOW MORE</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="time">Time</string>
    <string name="yesterday">Yesterday</string>
    <string name="ratings">Ratings</string>
    <string name="select_language">Select Language</string>
    <string name="custom">Custom</string>
    <string name="learn_more">Learn More</string>
    <string name="completion_rate">Completion Rate</string>
    <string name="cancellations">Cancellations</string>
    <string name="enter_your_main_number_to_be_used_ntaking_orders">Enter your main number to be used \ntaking orders</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="mobile_number_nverification">Mobile Number \nVerification</string>
    <string name="verify">Verify</string>

</resources>