<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.LanguageSettingsFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/language_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@drawable/arrowback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/language_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/language_settings"
            android:textColor="@color/black"
            android:textSize="20sp"  />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_350"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FBFBFB"
         app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/border">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/app_lang_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
                android:paddingVertical="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ic_app_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:background="@drawable/background_circle"
                    android:backgroundTint="@color/white_200"
                    android:paddingVertical="@dimen/_7sdp"
                    android:paddingHorizontal="@dimen/_9sdp"
                    android:src="@drawable/ic_app_language"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/app_lang_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/app_language"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/ic_app_lang"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/app_lang_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/set_the_language_for_your_app"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/app_lang_txt"
                    app:layout_constraintTop_toBottomOf="@id/app_lang_txt" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@drawable/ic_right_arrow"
                    app:layout_constraintBottom_toBottomOf="@+id/app_lang_des"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/app_lang_txt" />


                <View
                    android:id="@+id/view5"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_17sdp"
                    android:background="@color/white_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/app_lang_des"
                    app:layout_constraintTop_toBottomOf="@+id/app_lang_des" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/notification_lang_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/app_lang_layout"
                app:layout_constraintStart_toStartOf="@+id/app_lang_layout"
                app:layout_constraintTop_toBottomOf="@id/app_lang_layout">

                <ImageView
                    android:id="@+id/ic_bell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:background="@drawable/background_circle"
                    android:backgroundTint="@color/white_200"
                    android:paddingHorizontal="@dimen/_9sdp"
                    android:paddingVertical="@dimen/_7sdp"
                    android:src="@drawable/ic_bell"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/noti_lang_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/notification_language"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/ic_bell"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ic_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/set_the_language_for_notifications"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/noti_lang_txt"
                    app:layout_constraintTop_toBottomOf="@id/noti_lang_txt" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@drawable/ic_right_arrow"
                    app:layout_constraintBottom_toBottomOf="@+id/noti_lang_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/noti_lang_txt" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>